# ApplyForge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.fa.md  README.fr.md  README.md  add_skill.py  compile.sh  install.sh  main.py  master_cv.example.json  pyproject.toml  requirements.txt
.agent/local-rules/: agent_guide.md  cv_layout_tuning.md  eligibility_screening.md  llm_latex_generation.md  no_driving_license.md  no_personal_logs_in_git.md  project-rules.md  scrape_cnrs_emploi.md  scrape_servicepublic.md
.agent/rules/: quality_guard.md
.agents/: rules.fa.md  rules.md
.agents/instructions/: agent_guide.md
config/: roles.yaml
cover_letters/: Cover_Letter_Senior_Python_English.tex  Cover_Letter_Template_En.tex  Cover_Letter_Template_English.tex  Cover_Letter_Template_Fr.tex
data/: Amir_SHIRALI-POUR-CV_IT_source.json
docs/: architecture.md  bot-setup.md  git-workflow.md  install-carousel-theme.sh  latex-templates.md
docs/fa/: architecture.md  bot-setup.md  git-workflow.md  latex-templates.md
docs/fr/: architecture.md  bot-setup.md  git-workflow.md  latex-templates.md
linkedin/01_IT_job_market/: carousel.en.md  carousel.fa.md  carousel.fr.md  carousel.md
linkedin/02_data_science/: carousel.md
scripts/: data_jobs_scraper.mjs  extract_rome_codes.js  extract_rome_codes.mjs  extract_rome_codes.py  ft_investigator.mjs  job_stats_scraper.mjs  job_stats_scraper_run.mjs  linkedin_post.py
scripts/completions/: cv.zsh
src/bot/: apply_flow.py  archiver.py  bot.py
src/core/: llm_factory.py  location_utils.py  logger.py  (+4 more)
tests/: test_roles.py
(+45 files in other folders)
